脱敏工具类中提示Unchecked cast使用@SuppressWarnings("unchecked")注解处理